Add chat feature with AI and BYOK support
- Add side-by-side MCP Config + Chat interface
- Implement chat API with Cloudflare Workers AI (Llama 3.1 8B)
- Add rate limiting: 5 req/IP/day, 200 total/day
- Add BYOK (Bring Your Own Key) to bypass rate limits
- Add worker directory with Cloudflare Worker code
- Update documentation with chat API and rate limits

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@
 .vscode/
 *.sublime-project
 *.sublime-workspace
+
+# Node
+node_modules/
+npm-debug.log*
+
+# Cloudflare Workers
+.wrangler/
+.dev.vars
+
+# Build
+dist/
+*.tsbuildinfo
