Improve UI typography and add dynamic model selector
- Increase text sizes for better visual hierarchy (headline, instructions, examples)
- Add /models API endpoint with dynamic Cloudflare model fetching
- Replace model grid with simpler dropdown selector
- Show paid models as disabled with "add api key" hint
- Simplify API key section UI
- Add fullscreen model selector sync

--- a/worker/wrangler.toml
+++ b/worker/wrangler.toml
@@ -3,6 +3,10 @@ main = "src/index.ts"
 compatibility_date = "2024-12-01"
 account_id = "ec62a93ac5823c4621864bda8abb2be4"  # Ami3466@gmail.com
 
+# Environment variables
+[vars]
+CF_ACCOUNT_ID = "ec62a93ac5823c4621864bda8abb2be4"
+
 # Workers AI - free tier, no API key needed
 [ai]
 binding = "AI"
